--- a/src/Main/MintedTokens/MintedTokens.module.css
+++ b/src/Main/MintedTokens/MintedTokens.module.css
@@ -1,7 +1,7 @@
 .card {
-  margin: 32px auto;
+  margin: 32px 4vw;
   width: var(--content-width);
-  border-radius: 50px 50px 50px 50px;
+  border-radius: 3vw;
 }
 
 .container {
@@ -49,7 +49,7 @@
 }
 
 .h2 {
-  font-size: 24px;
+  font-size: calc(1em + 0.5vw);
   font-weight: 700;
   line-height: 1em;
   padding-bottom: 16px;
