--- a/src/Main/MintedTokens/MintedTokens.module.css
+++ b/src/Main/MintedTokens/MintedTokens.module.css
@@ -19,10 +19,10 @@
   cursor: pointer;
   font-size: 0.875rem;
   line-height: 1.5;
-  background-color: #d3d3d3;
-  border: none;
-  border-left: 2px solid #fff;
-  border-top: 2px solid #fff;
+  background-color: white;
+  /*border: none;*/
+  /*border-left: 2px solid #fff;
+  border-top: 2px solid #fff;*/
   box-shadow: none;
   color: #000;
   outline: 2px solid #000;
@@ -31,14 +31,14 @@
 .leftButton {
   left: -24px;
   position: absolute;
-  top: 50%;
+  top: 100%;
   transform: translateY(-50%);
 }
 
 .rightButton {
   position: absolute;
   right: -24px;
-  top: 50%;
+  top: 100%;
   transform: translateY(-50%);
 }
 
