--- a/src/shared/components/Token/Token.module.css
+++ b/src/shared/components/Token/Token.module.css
@@ -15,17 +15,19 @@
   color: white;*/
   align-items: left;
   font-weight: bold;
-  font-family: 'Unimono', monospace;
+  /*font-family: 'Unimono', monospace;*/
   height: auto;
   line-height: 1.05;
   overflow: hidden;
-  padding: 0 16px;
-  border: solid black 4px;
+  padding: 5px 16px;
+  /*border: solid black 4px;*/
+  font-size: calc(0.6em + 0.5vw);
 }
 
 .h2 {
   border-bottom: solid 4px rgba(2,191,231,.85);
   padding-top: 1em;
+  font-size: calc(1em + 0.5vw);
 }
 
 .tokenId {
