--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -77,8 +77,8 @@
 }
 
 .flex {
-  display: flex;
-  justify-content: space-between;
+/*  display: flex;
+  justify-content: space-between;*/
   font-style: italic;
   font-weight: bold;
 }
